# can_board_motor_simulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  servos.json
include/: CanBoard.h  CanSocket.h  ConfigLoader.h  Encoder.h  Motor.h  MotorController.h  Servo.h  SimulationEngine.h  TerminalUI.h
src/: CanBoard.cpp  CanSocket.cpp  ConfigLoader.cpp  Encoder.cpp  Motor.cpp  MotorController.cpp  Servo.cpp  SimulationEngine.cpp  TerminalUI.cpp  main.cpp
